--- a/src/app/pages/projects/create/type/installations/installations.component.html
+++ b/src/app/pages/projects/create/type/installations/installations.component.html
@@ -80,7 +80,7 @@
                                         <div class="d-flex gap-2">
                                             <div class="edit">
                                                 <button class="btn btn-sm btn-success edit-item-btn"
-                                                    data-bs-toggle="modal" data-bs-target="#showModal" routerLink="/projects/{{project_id}}/type/bodylegal"
+                                                    data-bs-toggle="modal" data-bs-target="#showModal" routerLink="/projects/{{project_id}}/type/installations/{{data.nombre}}/bodylegal"
                                                     >Conectar</button>
                                             </div>
                                             <div class="remove">
