--- a/src/app/pages/projects/create/type/body-legal/body-legal.component.html
+++ b/src/app/pages/projects/create/type/body-legal/body-legal.component.html
@@ -14,9 +14,28 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
-            <div class="card-header">
-                <h4 class="card-title mb-0">Cuerpos Legales</h4>
+         <div class="card-header" *ngIf="installation_id">
+            <div class="row">
+                <div class="col-xxl-3 col-lg-3" style="padding: 10px;">
+                    <h4 class="card-title mb-0">{{installation_id}}</h4>
+                </div>
+                
+                <div class="col-xxl-3 col-lg-3">
+                    <div class="titulo-caja"><b>0 Cuerpos legales</b></div>
+                </div>
+
+                <div class="col-xxl-3 col-lg-3">
+                    <div class="titulo-caja"><b>0 Artículos</b></div>
+                </div>
+
+                <div class="col-xxl-3 col-lg-3">
+                    <div class="search-box">
+                        <input type="text" class="form-control bg-light border-light" placeholder="Buscar...">
+                        <i class="ri-search-2-line search-icon"></i>
+                    </div>
+                </div>
             </div>
+         </div>
 
             <div class="card-body">
                 <div id="customerList">
@@ -87,7 +106,11 @@
                                     <td>
                                         
                                         <div class="d-flex gap-2">
-                                            <div class="edit">
+                                            <div class="edit" *ngIf="installation_id">
+                                                <button class="btn btn-sm btn-success edit-item-btn" routerLink="/projects/{{project_id}}/type/bodylegal/{{data.normaId}}/Detail/{{installation_id}}"
+                                                    >Conectar</button>
+                                            </div>
+                                            <div class="edit" *ngIf="!installation_id">
                                                 <button class="btn btn-sm btn-success edit-item-btn" routerLink="/projects/{{project_id}}/type/bodylegal/{{data.normaId}}/Detail"
                                                     >Conectar</button>
                                             </div>
