--- a/src/app/pages/projects/list/list.component.html
+++ b/src/app/pages/projects/list/list.component.html
@@ -319,14 +319,14 @@
 </div>-->
 <!-- Fin with icon header -->
 
-<div class="row g-0 text-center text-sm-start align-items-center mb-4">
-  <div class="col-sm-6">
+<div class="row g-0 text-center text-sm-start align-items-center mb-4" style="padding: 0px;position: fixed;bottom: 75px;width: 100%;">
+  <div class="col-sm-5">
       <div>
           <p class="mb-sm-0 text-muted">Mostrando <span class="fw-semibold">1</span> de <span class="fw-semibold">10</span> de <span class="fw-semibold text-decoration-underline">{{pagLength}}</span> entradas</p>
       </div>
   </div>
   <!-- end col -->
-  <div class="col-sm-6">
+  <div class="col-sm-5">
       <ul class="pagination pagination-separated justify-content-center justify-content-sm-end mb-sm-0">
           <li class="page-item disabled">
               <a href="javascript:void(0);" class="page-link">Anterior</a>
