--- a/src/app/pages/projects/create/type/body-legal/body-legal.component.html
+++ b/src/app/pages/projects/create/type/body-legal/body-legal.component.html
@@ -17,7 +17,7 @@
          <div class="card-header" *ngIf="installation_id">
             <div class="row">
                 <div class="col-xxl-3 col-lg-3" style="padding: 10px;">
-                    <h4 class="card-title mb-0">{{installation_id}}</h4>
+                    <h4 class="card-title mb-0">{{installation_nombre}}</h4>
                 </div>
                 
                 <div class="col-xxl-3 col-lg-3">
@@ -107,7 +107,7 @@
                                         
                                         <div class="d-flex gap-2">
                                             <div class="edit" *ngIf="installation_id">
-                                                <button class="btn btn-sm btn-success edit-item-btn" routerLink="/projects/{{project_id}}/type/bodylegal/{{data.normaId}}/Detail/{{installation_id}}"
+                                                <button class="btn btn-sm btn-success edit-item-btn" routerLink="/projects/{{project_id}}/type/bodylegal/{{data.normaId}}/Detail/{{installation_id}}/{{installation_nombre}}"
                                                     >Conectar</button>
                                             </div>
                                             <div class="edit" *ngIf="!installation_id">
