--- a/src/app/pages/projects/create/type/installations/installations.component.html
+++ b/src/app/pages/projects/create/type/installations/installations.component.html
@@ -40,17 +40,18 @@
                             </div>
                         </div>
                     </div>-->
-
-                    <div class="table-responsive table-card mt-3 mb-1">
-                        <table class="table">
+                    
+                    <div class="table-responsive table-card mt-3 mb-1">                    
+                        <!--tabla antigua-->
+                        <!--<table class="table">
                             <thead>
                                 <tr class="bg-light text-muted">
-                                    <!--<th scope="col" style="width: 50px;">
+                                --><!--<th scope="col" style="width: 50px;">
                                         <div class="form-check">
                                             <input class="form-check-input" type="checkbox" id="checkAll" value="option"
                                                 [(ngModel)]="masterSelected" (change)="checkUncheckAll($event)">
                                         </div>
-                                    </th>-->
+                                    </th>--><!--
                                     <th class="sort" data-sort="nombre">Instalación</th>
                                     <th class="sort" data-sort="cuerpo">Cuerpos legales vinculados</th>
                                     <th class="sort" data-sort="articulos">Articulos vinculados</th>
@@ -60,12 +61,12 @@
                             </thead>
                             <tbody>
                                 <tr *ngFor="let data of InstallationDatas" id="lj_{{data.id}}">
-                                    <!--<th scope="row">
+                                --><!--<th scope="row">
                                         <div class="form-check">
                                             <input class="form-check-input" type="checkbox" name="checkAll"
                                                 value="{{data.id}}" [(ngModel)]="data.state">
                                         </div>
-                                    </th>-->
+                                    </th>--><!--
                                     <td><ngb-highlight [result]="data.nombre"
                                             [term]="service.searchTerm"></ngb-highlight></td>
                                     <td><ngb-highlight [result]="data.cuerpo ? data.cuerpo : 0"
@@ -82,17 +83,84 @@
                                                 <button class="btn btn-sm btn-success edit-item-btn"
                                                     data-bs-toggle="modal" data-bs-target="#showModal" routerLink="/projects/{{project_id}}/type/installations/{{data.id}}/{{data.nombre}}/bodylegal"
                                                     >Conectar</button>
-                                            </div>
-                                            <div class="remove">
+                                            </div>-->
+                                            <!--<div class="remove">
                                                 <button class="btn btn-sm btn-danger remove-item-btn"
                                                     data-bs-toggle="modal" data-bs-target="#deleteRecordModal"
                                                     (click)="confirm(deleteModel,data.id)">Remover</button>
-                                            </div>
-                                        </div>
+                                            </div>-->
+                         <!--               </div>
                                     </td>
                                 </tr>
                             </tbody>
-                        </table>
+                        </table>-->
+
+                        <table mat-table [dataSource]="dataSource" class="table" style="border: gainsboro !important;"><!--class="mat-elevation-z8"-->
+                            <ng-container matColumnDef="nombre">
+                                
+                              <th mat-header-cell *matHeaderCellDef> 
+                                <span [style.paddingLeft.px]="40"> Instalación </span>
+                              </th>
+                            
+                              <td mat-cell *matCellDef="let data"> 
+                                <span 
+                                        [style.visibility]="!data.expandable ? 'hidden' : ''"
+                                        [style.marginLeft.px]="data.level * 32"
+                                        [style.cursor]="'pointer'"
+                                        (click)="treeControl.toggle(data)">
+                                  <!--<mat-icon class="mat-icon-rtl-mirror">
+                                    {{treeControl.isExpanded(data) ? 'expand_more' : 'chevron_right'}}
+                                  </mat-icon>-->
+                                  <i class="{{treeControl.isExpanded(data) ? 'ri-arrow-down-s-line' : 'ri-arrow-right-s-line'}}"></i>
+                                </span>
+                                <ngb-highlight [result]="data.nombre"></ngb-highlight>
+                              </td>
+                              
+                            </ng-container> 
+                          
+                            <ng-container matColumnDef="cuerpo">
+                              <th mat-header-cell *matHeaderCellDef> Cuerpos legales vinculados </th>
+                              <td mat-cell *matCellDef="let data">
+                                <ngb-highlight [result]="data.cuerpo ? data.cuerpo : 0"></ngb-highlight>
+                              </td>
+                            </ng-container> 
+
+                            <ng-container matColumnDef="articulos">
+                                <th mat-header-cell *matHeaderCellDef> Articulos vinculados </th>
+                                <td mat-cell *matCellDef="let data">
+                                  <ngb-highlight [result]="data.articulo ? data.articulo : 0"></ngb-highlight>
+                                </td>
+                              </ng-container> 
+                              
+                            <ng-container matColumnDef="estado">
+                                <th mat-header-cell *matHeaderCellDef> Estado </th>
+                                <td class="status" mat-cell *matCellDef="let data">
+                                    <span
+                                                class="badge badge-soft-{{data.conectado ? 'success' : 'danger'}} text-uppercase">{{data.conectado ? data.conectado : 'No conectado'}}</span>
+                                </td>
+                              </ng-container>
+
+                            <ng-container matColumnDef="accion">
+                                <th mat-header-cell *matHeaderCellDef> Acción </th>
+                                <td mat-cell *matCellDef="let data">
+  
+                                      <div class="d-flex gap-2">
+                                          <div class="edit">
+                                              <button class="btn btn-sm btn-success edit-item-btn"
+                                                  data-bs-toggle="modal" data-bs-target="#showModal" routerLink="/projects/{{project_id}}/type/installations/{{data.id}}/{{data.nombre}}/bodylegal"
+                                                  >Conectar</button>
+                                          </div>
+                                      </div>
+                                  </td>
+                              </ng-container> 
+                          
+                            <thead>
+                            <tr class="bg-light text-muted" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                            </thead>
+                            <tbody>
+                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                            </tbody>
+                          </table>
                     </div>
 
                     <div class="row justify-content-md-between align-items-md-center">
