--- a/src/app/pages/dashboards/project-anality/project-anality.component.html
+++ b/src/app/pages/dashboards/project-anality/project-anality.component.html
@@ -10,6 +10,10 @@
                 <div class="card">
                     <div class="row margin-card">
                         <div class="col-lg-3">
+                        <button type="button" class="btn btn-primary" routerLink="/projects/{{project_id}}/areas">Configurar Areas Administrativas</button>
+                        </div>
+
+                        <div class="col-lg-3">
                         <button type="button" class="btn btn-primary" routerLink="/projects/{{project_id}}/installations">Configurar Instalaciones y Procesos</button>
                         </div>
                         
