--- a/src/app/pages/projects/create/step1/step1.component.html
+++ b/src/app/pages/projects/create/step1/step1.component.html
@@ -70,7 +70,7 @@
                         <div class="mb-3 mb-lg-0">
                             <label for="choices-priority-input" class="form-label">Sector productivo</label>
                             <select class="form-select" placeholder="Selecciona sector productivo" data-choices data-choices-search-false
-                                id="choices-priority-input">
+                                id="choices-priority-input" (change)="selectAnswer($event, true)">
                                 <option value="">Selecciona sector productivo</option>
                                 <option *ngFor="let res of respuestas;" value="{{res.id}}">{{res.respuesta}}</option>
                             </select>
@@ -92,7 +92,7 @@
                         <div class="mb-3 mb-lg-0">
                             <label for="choices-priority-input" class="form-label">Tipo de actividad</label>
                             <select class="form-select" placeholder="Selecciona actividad" data-choices data-choices-search-false
-                                id="choices-priority-input">
+                                id="choices-priority-input" (change)="selectAnswer($event, true)">
                                 <option value="">Selecciona actividad</option>
                                 <option *ngFor="let res of respuestas;" value="{{res.id}}">{{res.respuesta}}</option>
                             </select>
@@ -112,7 +112,7 @@
             <ng-container *ngFor="let res of respuestas;">
                 <div class="col-lg-4">
                     <div class="card border" style="background: #fef2df;">
-                        <div class="card-body select-variable" style="text-align: center;" [ngClass]="{'select-variable-check': validateVariable(step+'|'+res.id)}" (click)="selectVariable(step+'|'+res.id)">
+                        <div class="card-body select-variable" style="text-align: center;" [ngClass]="{'select-variable-check': validateVariable(step+'|'+res.id)}" (click)="selectVariable(step+'|'+res.id, res.id)">
                             <b>{{res.respuesta}}</b>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
             <ng-container *ngFor="let res of respuestas;">
                 
                 <div class="col-lg-3" *ngIf="res.respuesta != 'MEDIO AMBIENTE' && res.respuesta != 'SEGURIDAD Y SALUD LABORAL' && res.respuesta != 'LABORAL' && res.respuesta != 'EFICIENCIA ENERGETICA'">
-                    <div class="card border select-variable" style="background: #d1eeea;margin-top: 1.5rem;" [ngClass]="{'select-variable-check': validateVariable(step+'|'+res.id)}" (click)="selectVariable(step+'|'+res.id)">
+                    <div class="card border select-variable" style="background: #d1eeea;margin-top: 1.5rem;" [ngClass]="{'select-variable-check': validateVariable(step+'|'+res.id)}" (click)="selectVariable(step+'|'+res.id, res.id)">
                         <div class="card-body" style="text-align: center;">
                             <div style="background-color: #d7e8d8;width: 40px;height: 40px; border: 1px solid #d7e8d8;border-radius: 24px;margin: auto;">
                                 <i class="ri-plant-fill" style="font-size: 24px;color: #4a9d4b;"></i>
@@ -187,7 +187,7 @@
                     
                 </div>     
         <div class="col-lg-3" *ngIf="res.respuesta == 'MEDIO AMBIENTE'">
-            <div class="card border select-variable" style="background: #d1eeea;margin-top: 1.5rem;" [ngClass]="{'select-variable-check': validateVariable(step+'|'+res.id)}" (click)="selectVariable(step+'|'+res.id)">
+            <div class="card border select-variable" style="background: #d1eeea;margin-top: 1.5rem;" [ngClass]="{'select-variable-check': validateVariable(step+'|'+res.id)}" (click)="selectVariable(step+'|'+res.id, res.id)">
                 <div class="card-body" style="text-align: center;">
                     <div style="background-color: #d7e8d8;width: 40px;height: 40px; border: 1px solid #d7e8d8;border-radius: 24px;margin: auto;">
                         <i class="ri-plant-fill" style="font-size: 24px;color: #4a9d4b;"></i>
@@ -200,7 +200,7 @@
             
         </div>
         <div class="col-lg-3" *ngIf="res.respuesta == 'SEGURIDAD Y SALUD LABORAL'">
-            <div class="card border select-variable" style="background: #faeedc;margin-top: 1.5rem;" [ngClass]="{'select-variable-check': validateVariable(step+'|'+res.id)}" (click)="selectVariable(step+'|'+res.id)">
+            <div class="card border select-variable" style="background: #faeedc;margin-top: 1.5rem;" [ngClass]="{'select-variable-check': validateVariable(step+'|'+res.id)}" (click)="selectVariable(step+'|'+res.id, res.id)">
                 <div class="card-body" style="text-align: center;">
                     <div style="background-color: #f4d890;width: 40px;height: 40px; border: 1px solid #f4d890;border-radius: 24px;margin: auto;">
                         <i class="ri-briefcase-fill" style="font-size: 24px;color: #ebaf47;"></i>
@@ -212,7 +212,7 @@
         </div>
 
         <div class="col-lg-3" *ngIf="res.respuesta == 'LABORAL'">
-            <div class="card border select-variable" style="background: #fae1dc;margin-top: 1.5rem;" [ngClass]="{'select-variable-check': validateVariable(step+'|'+res.id)}" (click)="selectVariable(step+'|'+res.id)">
+            <div class="card border select-variable" style="background: #fae1dc;margin-top: 1.5rem;" [ngClass]="{'select-variable-check': validateVariable(step+'|'+res.id)}" (click)="selectVariable(step+'|'+res.id, res.id)">
                 <div class="card-body" style="text-align: center;">
                     <div style="background-color: #ebbdb4;width: 40px;height: 40px; border: 1px solid #ebbdb4;border-radius: 24px;margin: auto;">
                         <i class="ri-shirt-fill" style="font-size: 24px;color: #f25c03;"></i>
@@ -225,7 +225,7 @@
         
 
         <div class="col-lg-3" *ngIf="res.respuesta == 'EFICIENCIA ENERGETICA'">
-            <div class="card border select-variable" style="background: #b3ebf6;margin-top: 1.5rem;" [ngClass]="{'select-variable-check': validateVariable(step+'|'+res.id)}" (click)="selectVariable(step+'|'+res.id)">
+            <div class="card border select-variable" style="background: #b3ebf6;margin-top: 1.5rem;" [ngClass]="{'select-variable-check': validateVariable(step+'|'+res.id)}" (click)="selectVariable(step+'|'+res.id, res.id)">
                 <div class="card-body" style="text-align: center;">
                     <div style="background-color: #8de1f2;width: 40px;height: 40px; border: 1px solid #8de1f2;border-radius: 24px;margin: auto;">
                         <i class="ri-flashlight-line" style="font-size: 24px;color: #0cc2e7;"></i>
@@ -249,7 +249,7 @@
         <ng-container *ngFor="let res of respuestas;">
         <div class="col-lg-4">
                 <div class="card border" style="background: #fef2df;">
-                    <div class="card-body select-variable" style="text-align: center;" [ngClass]="{'select-variable-check': validateVariable(step+'|'+res.id)}" (click)="selectVariable(step+'|'+res.id)">
+                    <div class="card-body select-variable" style="text-align: center;" [ngClass]="{'select-variable-check': validateVariable(step+'|'+res.id)}" (click)="selectVariable(step+'|'+res.id, res.id)">
                         <b>{{res.respuesta}}</b>
                     </div>
                 </div>
@@ -296,7 +296,7 @@
             <ng-container *ngFor="let res of respuestas;">    
             <div class="col-lg-4">
                 <div class="card border" style="min-height: 100px;">
-                    <div class="card-body select-variable" style="text-align: center;display: flex;justify-content: center;align-items: center;" [ngClass]="{'select-variable-check': validateVariable(step+'|'+res.id)}" (click)="selectVariable(step+'|'+res.id)">
+                    <div class="card-body select-variable" style="text-align: center;display: flex;justify-content: center;align-items: center;" [ngClass]="{'select-variable-check': validateVariable(step+'|'+res.id)}" (click)="selectVariable(step+'|'+res.id, res.id)">
                         <b>{{res.respuesta}}</b>
                     </div>
                 </div>
